--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,10 @@
 buildscript {
     
     repositories {
-        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,10 +16,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
         maven{
             url "https://jitpack.io"
+        }
+        maven{
+            url "https://maven.google.com"
         }
 
     }
